# fia-doc

./: .gitignore  LICENSE  README.md  conftest.py  fia_download.py  parse_entry_list.py  parse_event_note.py  parse_pit_stop_summary.py  parse_quali_laps.py  parse_race_fastest_laps.py  parse_race_final_classification.py  parse_race_history_chart.py  parse_race_lap_chart.py  parse_sprint_final_classification.py  parse_sprint_laps.py  parse_sprint_shootout_laps.py  pyproject.toml  requirements-dev.txt  requirements.txt  tyres.json
.github/workflows/: ci.yml
fia_download/: __init__.py  base.py  decision_docs.py  timing_docs.py
fiadoc/: _constants.py  core.py  drivers.py  parser.py  utils.py
fiadoc/models/: classification.py  driver.py  foreign_key.py  lap.py  pit_stop.py
fiadoc/parser/: __init__.py  classification_parser.py  page.py  parser.py
fiadoc/tests/: test_base_parser.py  test_drivers.py  test_page.py  test_parse_entry_list.py  test_parse_fp.py  test_parse_pit_stop.py  test_parse_quali.py  test_parse_race.py  test_textblock.py  test_utils.py
fiadoc/tests/fixtures/: 2023_13_race_pit_stop.json  2023_18_quali_classification.json  2023_18_quali_lap_times.json  2023_18_race_classification.json  2023_18_race_lap_times.json  2023_18_sprint_classification.json  2023_18_sprint_lap_times.json  2023_18_sprint_quali_classification.json  2023_18_sprint_quali_lap_times.json  2023_7_quali_classification.json  2023_7_quali_lap_times.json  2023_9_race_classification.json  2023_9_race_lap_times.json  2024_02_quali_classification.json  2024_04_entry_list.json  2024_05_entry_list.json  2024_05_quali_classification.json  2024_10_race_classification.json  2024_10_race_lap_times.json  2024_14_entry_list.json  2024_17_fp1_classification.json  2024_17_fp1_lap_times.json  2024_20_entry_list.json  2024_21_entry_list.json  2024_21_sprint_quali_classification.json  2024_21_sprint_quali_lap_times.json  2024_22_quali_classification.json  2024_22_quali_lap_times.json  2024_22_quali_provisional_classification.json  2024_2_quali_classification.json  2024_2_quali_lap_times.json  2024_3_quali_classification.json  2024_3_quali_lap_times.json  2024_4_entry_list.json  2024_5_entry_list.json  2024_5_quali_classification.json  2024_5_quali_lap_times.json  2024_8_quali_classification.json  2024_8_quali_lap_times.json  2024_8_race_classification.json  (+43 more)
models/: classification.py  driver.py  foreign_key.py  lap.py  pit_stop.py  quali_lap.py
notebook/: cross_validate.ipynb  parse_race_lap_analysis.ipynb
scripts/: profiler.py  run_with_ocr_debug.py
tests/: test_entry_list.py  test_integration_race_history_chart.py  test_parse_entry_list.py  test_parse_pit_stop_summary.py  test_parse_race_fastest_laps.py  test_parse_race_final_classification.py  test_parse_race_history_chart.py  test_parse_race_lap_chart.py  test_pit_stop_summary.py  test_race_fastest_laps.py  test_race_final_classification.py  test_race_history_chart.py  test_race_lap_chart.py
training/labelling/: app.py
training/labelling/templates/: index.html
