[project]
name = "fia-doc"
version = "0.0.1"
authors = [
  {email = "wang@jolpi.ca"},
  {name = "Xuanyi Wang"}
]
description = "Parse FIA PDF documents to get race data"
readme = "README.md"

requires-python = ">=3.12,<3.14"  # jolpica-schemas requires 3.12+
dependencies = [
  "jolpica-schemas @ git+https://github.com/jolpica/jolpica-f1@71f12b1c9637aa838926abcb6f4840fbfac4d87c#egg=jolpica-schemas&subdirectory=jolpica/schemas",
  "matplotlib>=3.4.0,<4.0.0",
  "pandas>=2.0.0,<3.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pymupdf==1.25.1",  # Seems related to pymupdf/PyMuPDF#4206? Check `assert option in formats`
  "pytesseract==0.3.*",
  "requests>=2.28.0,<3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = [
  "fiadoc/**"
]
exclude = [
  "fiadoc/tests/**"
]

[tool.hatch.build.targets.sdist]
include = [
  "fiadoc/**"
]
exclude = [
  "fiadoc/tests/**"
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "fiadoc/tests"
]
